--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,8 @@ limitations under the License.
           package="org.zeroxlab.util.tscal"
           android:sharedUserId="android.uid.system">
   <uses-permission android:name="android.permission.SET_ALWAYS_FINISH" />
+  <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
+
   <application android:icon="@drawable/icon" android:label="@string/app_name">
     <activity android:name=".TSCalibration"
               android:label="Calibration"
