--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,7 @@ limitations under the License.
     <activity android:name=".TSCalibration"
               android:label="Calibration"
               android:launchMode="standard"
+              android:exported="true"
               android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
               android:configChanges="keyboard|keyboardHidden|navigation|orientation">
       <intent-filter>
@@ -32,7 +33,8 @@ limitations under the License.
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-    <activity android:name=".TSCalibrationStartup">
+    <activity android:name=".TSCalibrationStartup"
+              android:exported="true">
       <intent-filter android:priority="100">
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.HOME" />
